--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -11,9 +11,17 @@ jobs:
         run: |
           node -v
           npm -v
-      - name: python-script
+      - name: python-command
         run: |
           import platform
           print
           (platform.processor())
-        shell: python  
+        shell: python 
+  run-windows-commands:
+    runs-on: windows-latest
+    steps:
+      - name: Directory PowerShell
+        run: Get-Location
+      - name: Directory Bash
+        run: pwd
+        shell: bash
