added needs included commas

--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -18,7 +18,7 @@ jobs:
           (platform.processor())
         shell: python 
   run-windows-commands:
-  needs: [run-shell-command]
+  needs: ["run-shell-command"]
     runs-on: windows-latest
     steps:
       - name: Directory PowerShell
