--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,8 @@
 name: GitHub Actions Demo
-on: push
-on: pull_request
-  types: [closed, assigned, opened, reopened]
+on: 
+ push
+ pull_request
+   types: [closed, assigned, opened, reopened]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
