--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,7 @@
 name: GitHub Actions Demo
 on: 
  push
- pull_request
+ pull_request:
    types: [closed, assigned, opened, reopened]
 jobs:
   Explore-GitHub-Actions:
