--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,11 @@
 name: Actions Workflow
 
-on: [push]
+on: 
+  schedule:
+    - cron: "0/5 * * * *"
+    - cron: "0/6 * * * *"
+
+  pull_request:
 
 jobs:
   run-github-actions:
