--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -21,6 +21,7 @@ jobs:
     runs-on: windows-latest
     needs: "run-shell-command"
     steps:
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - name: Directory PowerShell
         run: Get-Location
       - name: Directory Bash
