--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -5,7 +5,7 @@ jobs:
   run-shell-command:
     runs-on: ubuntu-latest
     steps:
-      - name: echo a string
+      - name: eccho a string
         run: echo "Hello World, How are things?"
       - name: multiline script
         run: |
