cleared the assigned type

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,7 +2,7 @@ name: GitHub Actions Demo
 on: 
  push:
  pull_request:
-   types: [closed, assigned, opened, reopened]
+   types: [closed, opened, reopened]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
