--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -29,7 +29,7 @@ jobs:
         id: greet
         uses: actions/hello-world-javascript-action@v1
         with: 
-          who-to-greet: Seamus
+          who-to-greet: Sean
       - name: greeting Log Time
         run: echo "${{ steps.greet.outputs.time }}"
       
