--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,7 @@
 name: Actions Workflow
 
-on: 
-  schedule:
-    - cron: "0/6 * * * *"
+on: schedule
+    - cron: "0/5 * * * *"
     #- cron: "0/6 * * * *"
 
   # pull_request:
