--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,8 @@
 name: Actions Workflow
 
-on: 
-  schedule:
-  - cron: "*/10 * * * *"
+on: [push]
+  #schedule:
+  #- cron: "*/10 * * * *"
     #- cron: "0/6 * * * *"
 
   # pull_request:
